[EFL][WK2] Regression(135935) layout tests snapshots are flaky https://bugs.webkit.org/show_bug.cgi?id=103468

Reviewed by Kenneth Rohde Christiansen.

Source/WebKit2:

Make sure that we wait for pending repaints before taking a
snapshot to avoid flakiness in pixel / ref tests. We also
suspend all animations before taking the snapshot to make
sure we don't wait forever for repaint events to be processed.

* UIProcess/API/efl/EwkViewImpl.cpp:
(EwkViewImpl::takeSnapshot):

LayoutTests:

Unskip a lot of ref tests for WebKit2 EFL now that they are no longer
flaky.

* platform/efl-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/123988@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138504 268f45cc-cd09-0410-ab3c-d52691b4dbfc